--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,1 +1,49 @@
 /* Your CSS here. */
+.profile-image {
+  border-radius: 10px;
+  width: 150px;
+  height: 150px;
+}
+
+.profile-bio-container {
+  width: 65%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container {
+  /* center the container */
+  /* NEVER use flexbox */
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 94%;
+  background-color: #9acbea;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.bio {
+  text-align: left;
+  margin-left: 5%;
+  margin-right: 5%;
+  text-align: left;
+  display: inline-block;
+  /* move the text slightly right to maintain visual balance*/
+  /* value depend on the width of the text */
+  transform: translateX(calc(3%));
+  
+  
+  
+}
+
+.logos {
+  width: auto;
+  height: 1em;
+  vertical-align: middle;
+}
+
+.email {
+  font-family: 'STIX Two Math', 'Cambria Math', 'Times New Roman', serif;
+}
